# exe

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: standards.mdc
agent/: __init__.py  cli.py  config.py  explainer.py  illustrate.py  memory.py  models.py  pipeline.py  publish.py  research.py  sources.py  streaming.py  tracing.py
agent/evals/: grounding.py
agent/illustrations/: prompt.py
agent/illustrations/references/: composition-patterns.md  style-dna.md  xiaohei-ip.md
docs/: build-record.md  technical-statement.md
docs/superpowers/specs/: 2026-07-01-experiential-explainer-design.md
evals/: conftest.py  test_config.py  test_explainer.py  test_grounding.py  test_illustrate.py  test_memory.py  test_memory_module.py  test_models.py  test_publish.py  test_publish_resolve.py  test_research.py  test_sources.py  test_streaming.py  test_tracing.py
evals/fixtures/: extract_result.json  glossary_with_event_horizon.json  mem0_search_glossary.json  mem0_search_style.json  sample_article.md  sample_run_record.json
published/2026-07-01-what-are-sea-lions/: article.md  index.md
