[project]
name = "research-explainer-agent"
version = "0.1.0"
description = "Tavily FDE take-home: research-to-published explainer agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-nebius>=0.1.0",
    "langchain-tavily>=0.2.0",
    "langsmith>=0.9.5",
    "mem0ai>=2.0.11",
    "pygithub>=2.9.1",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
